--- a/HtmlClasses/htmlClass3.html
+++ b/HtmlClasses/htmlClass3.html
@@ -32,28 +32,33 @@
       </a>
       <a href="./htmlClass2.html" title="Redirects user to class 2" target="_blank'">
         Click to go to class 2
-    </a><br> <br>
+      </a>
+    <br> 
+    <br>
     <!-- We can use mailto: inside the href attribute to create a link that opens the user's email program to let them send an email -->
      <a href="mailto:georgev421@gmail.com">Send Mail</a>
-
-     <!-- class and id attributes are used to identify elements, id's are unique while classes are used to identify a group.
+    
+     <!-- class and id attributes are used to identify elements, id's are unique, while classes are used to identify a group.
      # is used to reference an id 
      -->
      <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti asperiores consequatur harum molestias laudantium dolor tempore, doloribus quidem officia molestiae atque ipsam quis culpa ducimus deleniti quod officiis ipsa est! Repellendus, consectetur fuga maxime at quod, minus quo est quisquam, placeat inventore suscipit illum magni repudiandae eveniet? Magnam, vel corrupti?
      </p>
      <hr>
-    <a href="#header">Go to header</a> <br>
-    <a href="./htmlClass2.html#address">Go to address section in class 2</a> <br>
-    <a href="#">Go to Top</a> <br>
+    <a href="#header">Go to header</a> 
+    <br>
+    <a href="./htmlClass2.html#address">Go to address section in class 2</a> 
+    <br>
+    <a href="#">Go to Top</a> 
+    <br>
 
     <!-- An HTML Iframe is used to display a web page within a web page -->
      <h3>Using HTML IFrames</h3>
      <iframe src="./htmlClass1.html" title="Class 1 Web Page" width="70%"></iframe>
 
+     <iframe src="./htmlClass1.html" name="iframe" width="70%"></iframe>
 
      <h3>Using Iframes as target for a link</h3>
-     <iframe src="./htmlClass1.html" name="iframe" width="70%"></iframe>
 
      <a href="https://blessiousdivine.com/" target="iframe">Take site into iframe</a>
 
