Updated class files

--- a/JsClasses/index.html
+++ b/JsClasses/index.html
@@ -20,16 +20,20 @@
                 i.e If a script element has a src attribute specified, it should not have a script embedded inside its tags.
     -->
 
-    <script src="class4.js"> </script>
+    <script src="class6.js"> </script>
+
+    <!-- <script src="class5.js"> </script> -->
+
+    <!-- <script src="class4.js"> </script> -->
 
     <!-- <script src="class3.js"> </script> -->
 
     <!-- <script src="class2.js"> </script> -->
 
-    <script src="./colorChanger.js">
+    <!-- <script src="./colorChanger.js">
 
         // document.body.style.backgroundColor = "pink";
-    </script>
+    </script>   -->
 
 </body>
 </html>
