--- a/JsClasses/index.html
+++ b/JsClasses/index.html
@@ -20,7 +20,9 @@
                 i.e If a script element has a src attribute specified, it should not have a script embedded inside its tags.
     -->
 
-    <script src="class9.js"> </script>
+    <script src="task1.js"> </script>
+
+    <!-- <script src="class9.js"> </script> -->
 
     <!-- <script src="class8.js"> </script> -->
 
