New Tasks, JSON and Data Storage in JS class

--- a/JsClasses/index.html
+++ b/JsClasses/index.html
@@ -9,7 +9,11 @@
     
     <h1>Welcome to JavaScript</h1>
 
-    <button onclick="changeColor()">Change body background color</button>
+    <!-- <button onclick="changeColor()">Change body background color</button> -->
+
+    <button onclick="localStorage.clear()">Clear The local storage</button>
+
+    <button onclick="clearInterval(interval)">Stop the Loop</button>
 
     <!-- 
         The script tag is used to include javascript into a HTML file.
@@ -20,7 +24,9 @@
                 i.e If a script element has a src attribute specified, it should not have a script embedded inside its tags.
     -->
 
-    <script src="task1.js"> </script>
+    <script src="class17.js"> </script>
+
+    <!-- <script src="task1.js"> </script> -->
 
     <!-- <script src="class9.js"> </script> -->
 
@@ -38,10 +44,10 @@
 
     <!-- <script src="class2.js"> </script> -->
 
-    <!-- <script src="./colorChanger.js">
+    <script src="./colorChanger.js">
 
         // document.body.style.backgroundColor = "pink";
-    </script>   -->
+    </script>  
 
 </body>
 </html>
