Error Handling and APIs in Js -- Answers to Task

--- a/JsClasses/index.html
+++ b/JsClasses/index.html
@@ -15,6 +15,14 @@
 
     <button onclick="clearInterval(interval)">Stop the Loop</button>
 
+    <br>
+    <br>
+
+    <img src="../images/flower.jpg" alt="different images" id="imageContainer" width="50%">
+    
+    <br>
+    <button onclick="imageChanger()">Change the image</button>
+
     <!-- 
         The script tag is used to include javascript into a HTML file.
             The src attribute in the script opening tag, is used to add an external javascript file to the HTML file.
@@ -24,7 +32,11 @@
                 i.e If a script element has a src attribute specified, it should not have a script embedded inside its tags.
     -->
 
-    <script src="class17.js"> </script>
+    <script src="JsTasks/task17.js"> </script>
+
+    <!-- <script src="class19.js"> </script> -->
+
+    <!-- <script src="class17.js"> </script> -->
 
     <!-- <script src="task1.js"> </script> -->
 
