React and JSclass

--- a/JsClasses/index.html
+++ b/JsClasses/index.html
@@ -24,6 +24,7 @@
                 i.e If a script element has a src attribute specified, it should not have a script embedded inside its tags.
     -->
 
+    <script src="class21.js"> </script>
     <!-- <script src="class19.js"> </script> -->
 
     <!-- <script src="class17.js"> </script> -->
